--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                         labels: ['NLP', 'Info Retrieval', 'Pattern Recognition']
                     },
                     outputs: [
-                        { icon: '💡', label: 'Curated Insights' },
+                        { icon: '💡', label: 'Curated Insights from Projects' },
                         { icon: '✅', label: 'Synthesized Best Practices' },
                         { icon: '🗺️', label: 'Relevant Architectural Patterns' },
                         { icon: '🗣️', label: 'Data-Backed Talking Points' }
@@ -84,14 +84,14 @@
                 help: [
                     'Streamline the creation of compelling, data-backed business cases for AI initiatives.',
                     'More rapidly model and forecast potential ROI, supporting your evangelism to CIOs and business executives.',
-                    'Free up time to focus on strategic alignment, client relationship building, and refining the narrative.'
+                    'Free up time to focus on strategic alignment, client relationship building and refining the narrative.'
                 ],
                 leverage: 'Use AI tools designed for financial modeling and business case development. These tools could integrate with industry benchmark data, your firm\'s anonymized past project data, and potentially client-specific data (with permission) to generate baseline projections for KPIs.',
                 schematic: {
                     inputs: [
                         { icon: '📊', label: 'Industry Benchmarks' },
                         { icon: '🗂️', label: 'Firm\'s Historical Data' },
-                        { icon: '🎯', label: 'Client Operational Metrics' },
+                        { icon: '🎯', label: 'Client Operational Metrics-KPIs' },
                         { icon: '📝', label: 'Proposed Initiative Scope' }
                     ],
                     engine: {
