Update header title for deployment strategists

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <div id="app" class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-8 md:py-12">
         <header class="text-center mb-10 md:mb-16">
-            <h1 class="text-4xl md:text-5xl font-bold text-slate-900 mb-2">AI for the Program Architect</h1>
+            <h1 class="text-4xl md:text-5xl font-bold text-slate-900 mb-2">AI for Deployment Strategists - Enterprise Architects</h1>
             <p class="text-lg text-slate-600 max-w-3xl mx-auto">An interactive guide to leveraging Artificial Intelligence in your strategic role, from evangelism to governance.</p>
         </header>
 
